--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
+:root {
+  --sidebar-width: 250px;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.headerContainer {
+  height: 10vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.sidebarContainer .MuiDrawer-paperAnchorLeft {
+  /* width: min(90%, 250px); */
+  width: var(--sidebar-width);
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 90vh;
+}
+
+.mainContainer {
+  margin-left: var(--sidebar-width);
+}
+
+@media screen and (max-width: 900px) {
+  .sidebarContainer .MuiDrawer-paperAnchorLeft {
+    height: 100vh;
   }
-  to {
-    transform: rotate(360deg);
+
+  .mainContainer {
+    margin-left: 0;
   }
 }
