--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,39 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 .container-tomorrow {
-  border: 1px solid #93D16A;
+  border: 1px solid #93d16a;
   margin: auto 10px;
 }
 
+.dashboardBg {
+  background-image: url("../src/assets/trucksBg.jpg");
+  margin: 0 !important;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  
+}
+.dashboardTitleContainer{
+  padding-top:120px ;
+}
+.dashboardTitle{
+color: var(--white);
+}
 .dashboard-inner {
   text-align: -webkit-center;
-
 }
 
 .list1 {
@@ -44,7 +58,6 @@ li:first-child {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .css-tlelie-MuiListItemText-root {
@@ -59,7 +72,6 @@ li:first-child {
   -webkit-box-shadow: 0px 14px 23px 0px rgb(81 112 78 / 14%);
   -moz-box-shadow: 0px 14px 23px 0px rgba(81, 112, 57, 0.54);
   color: var(--dark-green) !important;
-
 }
 
 .css-10hburv-MuiTypography-root {
@@ -71,3 +83,23 @@ li:first-child {
   font-weight: bold !important;
   border-color: var(--dark-green) !important;
 }
+.list-deliveries{
+  justify-content: space-around;
+
+}
+
+ .scheduleCard{
+  width: 190px;
+
+ }
+ .line{
+  color: var(--dark-green);
+  font-weight: bolder;
+ }
+ .deliveriesValue {
+  color: var(--dark-green);
+ }
+ .deliveriesTitle{
+  color: var(--dark-green);
+
+ }
