--- a/src/index.css
+++ b/src/index.css
@@ -13,35 +13,36 @@ code {
 }
 
 @media screen and (max-width: 500px) {
-  .finaliseTitl{
+  .finaliseTitl {
     display: flex;
     flex-direction: column;
   }
-  .searchInputContainer{
+  .searchInputContainer {
     width: fit-content;
   }
-  .deliveriesTitle{
+  .deliveriesTitle {
     border-bottom: 1px solid var(--dark-green);
     padding-bottom: 15px;
     margin-top: 20px;
   }
-  .no-border .deliveriesTitle{
-    border: none!important;
+  .no-border .deliveriesTitle {
+    border: none !important;
   }
-  .headerSearch{
-  margin-right: auto;
- }
- .finaliseTableContainer{
-  margin: auto 10px;
- }
-  
+  .headerSearch {
+    margin-right: auto;
+  }
+  .finaliseTableContainer {
+    margin: auto 10px;
+  }
+  .input-delviry-address{
+     flex-wrap: wrap;
+    gap: 0px !important;
+  }
 }
-.finaliseTitl{
+.finaliseTitl {
   display: flex;
   justify-content: space-between;
- 
 }
-
 
 .container-tomorrow {
   border: 1px solid #93d16a;
@@ -61,15 +62,15 @@ code {
   height: 100%;
 }
 
-.dashboardTitleContainer  {
+.dashboardTitleContainer {
   position: relative;
   position: absolute;
   top: 0;
   padding-top: 120px;
 }
 
-.dashboardTitle  {
-    color: var(--white);
+.dashboardTitle {
+  color: var(--white);
 }
 
 .dashboard-inner {
@@ -87,12 +88,11 @@ code {
 .list-btn {
   border-bottom: 1px solid var(--light-gray) !important;
   color: var(--dark-green) !important;
- }
+}
 
 li:first-child {
   border-top: 0.1px solid var(--light-gray);
 }
-
 
 .profile-container {
   display: flex;
@@ -141,17 +141,39 @@ li:first-child {
   color: var(--dark-green);
 }
 
-.finaliseTitle{
+.finaliseTitle {
   color: var(--gray);
 }
-.finaliseTitle1{
+.finaliseTitle1 {
   color: var(--dark-green) !important;
 }
-.viewRoute{
+.viewRoute {
   color: var(--dark-green);
   cursor: pointer;
- }
- .MuiToolbar-root p{
+}
+.MuiToolbar-root p {
   margin-bottom: 0;
+}
+
+.customerDetailsContainer{
+  border: 1px solid var(--light-gray);
+  border-radius: 5px;
  }
+.titleCustomerDetail{
+
+color: var(--gray);
+}
+.MuiFormControl-root{
+  width: -webkit-fill-available;
+
+}
+
+ .input-outline{
+  width: -webkit-fill-available;
+
+ }
+ .input-delviry-address{
+  gap: 20px;
+ }
+ 
  
