--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --gray: #495767;
   --delete-red: #c01616;
   --light-red: #fadfdf;
+  --yelloww: rgb(253, 181, 27);
   --sidebar-width: 250px;
   --border-radius: 4px;
 }
@@ -20,35 +21,20 @@
   background-color: var(--bg-color);
 }
 
-.headerContainer {
-  height: 10vh;
-}
-
 .headerContainer header {
   background-color: var(--dark-green);
 }
 
 .sidebarContainer .MuiDrawer-paperAnchorLeft {
-  /* width: min(90%, 250px); */
   width: var(--sidebar-width);
   position: absolute;
   left: 0;
   top: 0;
-  min-height: 90vh;
+  min-height: 100vh;
 }
 
 .mainContainer {
   margin-left: var(--sidebar-width);
-}
-
-@media screen and (max-width: 900px) {
-  .sidebarContainer .MuiDrawer-paperAnchorLeft {
-    height: 100vh;
-  }
-
-  .mainContainer {
-    margin-left: 0;
-  }
 }
 
 .headerTitle {
@@ -79,19 +65,173 @@
   opacity: 0.8;
 }
 
+.MuiToolbar-root p {
+  margin-bottom: 0;
+}
+
+.formsContainer {
+  border: 1px solid var(--light-gray);
+  border-radius: 5px;
+}
+
+.formsTitles {
+  color: var(--gray);
+}
+
+.input-outline {
+  width: -webkit-fill-available;
+}
+
+.formsLable {
+  color: var(--light-gray);
+  font-weight: bold;
+}
+
+.formsInput {
+  background-color: var(--light-gray);
+  border-radius: 5px;
+  padding: 10px;
+  border: 0;
+  outline: none;
+}
+
+textarea {
+  border: 0;
+  border-radius: 5px;
+  outline: none;
+  background-color: var(--light-gray);
+  padding: 10px;
+}
+
+/*Dashboard section*/
+
+.dashboardBg {
+  background-image: url("../src/assets/trucksBg.jpg");
+  margin: 0 !important;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.dashboardBgCover {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
+}
+
+.dashboard-tomorrow {
+  border: 1px solid #93d16a;
+}
+
+.dashboardTitleContainer {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+}
+
+.initial-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dashboard-inner {
+  text-align: center;
+  text-align: -webkit-center;
+}
+
+.sideBarList .MuiBox-root {
+  text-align-last: center;
+}
+
+.sideBarList .list-btn {
+  border-bottom: 1px solid var(--light-gray) !important;
+  color: var(--dark-green) !important;
+}
+
+.sideBarList li:first-child {
+  border-top: 0.1px solid var(--light-gray);
+}
+
+.sideBarList .css-tlelie-MuiListItemText-root {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+.initials-circle {
+  border-radius: 50%;
+  border: 1px solid var(--dark-green);
+  box-shadow: 0px 14px 23px 0px rgb(81 112 57 / 54%);
+  -webkit-box-shadow: 0px 14px 23px 0px rgb(81 112 78 / 14%);
+  -moz-box-shadow: 0px 14px 23px 0px rgba(81, 112, 57, 0.54);
+  color: var(--dark-green) !important;
+}
+
+.sideBarList .css-10hburv-MuiTypography-root {
+  font-weight: bold !important;
+}
+
+.line {
+  color: var(--dark-green);
+  font-weight: bolder;
+}
+
+.deliveriesTitle {
+  color: var(--dark-green);
+  font-weight: 500;
+  font-size: 15px;
+}
+
+/*orders section*/
+
+.order-title-border {
+  border-right: 1px solid var(--dark-green);
+  border-left: 1px solid var(--dark-green);
+}
+
+.orderConainer {
+  background-color: var(--white);
+  border-radius: 5px;
+  border: 1px solid var(--dark-green);
+  padding: 20px;
+}
+
+.Address-orders {
+  text-align: center;
+}
+
+.order-title {
+  color: var(--dark-green);
+}
+
+.order-card-lable {
+  color: var(--gray);
+}
+
+/*finalize section*/
+
+.viewRoute {
+  color: var(--dark-green);
+  cursor: pointer;
+  font-weight: 600;
+}
+
+/*Products section*/
+
 .statsCard {
   border-radius: var(--border-radius);
   border: 2px solid var(--light-gray);
   background-color: var(--white);
 }
 
-.statsCard h5 {
+.statsCard h3 {
   color: var(--gray);
   opacity: 0.8;
   font-weight: 400 !important;
 }
 
-.statsCard h3 {
+.statsCard h2 {
   color: var(--gray);
 }
 
@@ -140,10 +280,40 @@
 }
 
 .statusCellHidden {
-  color: rgb(253, 181, 27);
+  color: var(--yelloww);
   font-weight: 600;
   cursor: pointer;
-  border: 1px solid rgb(253, 181, 27);
+  border: 1px solid var(--yelloww);
   padding: 5% 10%;
   border-radius: 50px;
+}
+
+/*medias*/
+
+@media screen and (max-width: 450px) {
+  .no-border .deliveriesTitle {
+    border: none !important;
+  }
+
+  .dashboardTitleContainer {
+    position: absolute;
+    top: 40%;
+    left: 20px;
+  }
+
+  .Address-orders {
+    margin-bottom: 5px;
+    text-align: left;
+  }
+
+  .order-title-border {
+    border: 0 !important;
+    padding: 10px 0;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .mainContainer {
+    margin-left: 0;
+  }
 }
