--- a/src/index.css
+++ b/src/index.css
@@ -11,274 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-@media screen and (max-width: 700px) {
-}
 
-@media screen and (max-width: 500px) {
-  .finaliseTitl {
-    display: flex;
-    flex-direction: column;
-  }
-  .searchInputContainer {
-    width: fit-content;
-  }
-  .deliveriesTitle {
-    border-bottom: 1px solid var(--dark-green);
-    padding-bottom: 15px;
-    margin-top: 20px;
-  }
-  .no-border .deliveriesTitle {
-    border: none !important;
-  }
-  .headerSearch {
-    margin-right: auto;
-  }
-  .finaliseTableContainer {
-    margin: auto 10px;
-  }
-  .input-delviry-address {
-    flex-wrap: wrap;
-    gap: 0px !important;
-  }
-  .mainBtn .btnContained {
-    margin-bottom: 10px;
-    margin-left: 0 !important;
-    margin-right: 10px;
-  }
-  .order-title-border {
-    border-right: none !important;
-    border-bottom: 1px solid var(--dark-green);
-    margin-bottom: 10px;
-    padding: 10px 0;
-    height: 90px !important;
-  }
-  .orderConainer {
-    display: flex !important;
-    justify-content: start !important;
-  }
-  .Address-orders {
-    border-right: none !important;
-    margin-bottom: 20px;
-    border-bottom: none !important;
-    text-align-last: left;
-  }
-  .left-orders{
-    text-align-last: left;
-  }
-  .hhhh{
-    display: flex;
-    justify-content: flex-start;
-  }
-}
-.mainBtn .btnContained {
-  margin-left: 10px;
-  margin-top: 10px;
-}
-.finaliseTitl {
-  display: flex;
-  justify-content: space-between;
-}
-
-.container-tomorrow {
-  border: 1px solid #93d16a;
-  margin: auto 10px;
-}
-
-.dashboardBg {
-  background-image: url("../src/assets/trucksBg.jpg");
-  margin: 0 !important;
-  height: 300px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-.dashboardBgCover {
-  background-color: rgba(0, 0, 0, 0.5);
-  height: 100%;
-}
-
-.dashboardTitleContainer {
-  position: relative;
-  position: absolute;
-  top: 0;
-  padding-top: 120px;
-}
-
-.dashboardTitle {
-  color: var(--white);
-}
-
-.dashboard-inner {
-  text-align: -webkit-center;
-}
-
-.list1 {
-  max-width: 637px;
-}
-
-.MuiBox-root {
-  text-align-last: center;
-}
-
-.list-btn {
-  border-bottom: 1px solid var(--light-gray) !important;
-  color: var(--dark-green) !important;
-}
-
-li:first-child {
-  border-top: 0.1px solid var(--light-gray);
-}
-
-.profile-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.css-tlelie-MuiListItemText-root {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-}
-
-.profile {
-  border-radius: 50%;
-  border: 1px solid var(--dark-green);
-  box-shadow: 0px 14px 23px 0px rgb(81 112 57 / 54%);
-  -webkit-box-shadow: 0px 14px 23px 0px rgb(81 112 78 / 14%);
-  -moz-box-shadow: 0px 14px 23px 0px rgba(81, 112, 57, 0.54);
-  color: var(--dark-green) !important;
-}
-
-.css-10hburv-MuiTypography-root {
-  font-weight: bold !important;
-}
-
-.css-1rwt2y5-MuiButtonBase-root-MuiButton-root {
-  color: var(--dark-green) !important;
-  font-weight: bold !important;
-  border-color: var(--dark-green) !important;
-}
-.list-deliveries {
-  justify-content: space-around;
-}
-
-.scheduleCard {
-  width: 190px;
-}
-.line {
-  color: var(--dark-green);
-  font-weight: bolder;
-}
-.deliveriesValue {
-  color: var(--dark-green);
-}
-.deliveriesTitle {
-  color: var(--dark-green);
-}
-
-.finaliseTitle {
-  color: var(--gray);
-}
-.finaliseTitle1 {
-  color: var(--dark-green) !important;
-}
-.viewRoute {
-  color: var(--dark-green);
-  cursor: pointer;
-}
-.MuiToolbar-root p {
-  margin-bottom: 0;
-}
-
-.customerDetailsContainer {
-  border: 1px solid var(--light-gray);
-  border-radius: 5px;
-}
-.titleCustomerDetail {
-  color: var(--gray);
-}
-.MuiFormControl-root {
-  width: -webkit-fill-available;
-}
-
-.input-outline {
-  width: -webkit-fill-available;
-}
-.input-delviry-address {
-  gap: 20px;
-}
-
-.input-customer {
-  background-color: var(--light-gray);
-  border-radius: 5px;
-  padding: 4px 10px;
-  border-color: var(--light-gray);
-  color: var(--gray);
-  outline: none;
-  border: 1px solid var(--light-gray);
-}
-.lable-customer {
-  font-size: small;
-  color: var(--light-gray);
-  font-weight: bold;
-}
-textarea {
-  border: 1px solid var(--light-gray);
-  border-color: var(--light-gray);
-  border-radius: 5px;
-  color: var(--gray);
-  outline: none;
-  background-color: var(--light-gray);
-  padding-left: 10px;
-}
-.input-dropDown {
-  border: 1px solid var(--light-gray);
-  background-color: var(--light-gray);
-  outline: none;
-  border-radius: 5px;
-}
-.input-ff {
-  background-color: var(--light-gray);
-  border-radius: 5px;
-  padding: 4px 10px;
-  border-color: var(--light-gray);
-  color: var(--gray);
-  outline: none;
-  border: 1px solid var(--light-gray);
-}
-.MuiFormControl-root {
+.dropDownContainer .MuiFormControl-root {
   margin: 0 !important;
   background-color: var(--light-gray);
 }
 
 .MuiInputBase-root .MuiSelect-select {
-  padding: 5px;
-  border: 1px solid var(--light-gray) !important;
+  padding: 10px;
 }
+
 .MuiInputBase-root .MuiSelect-select :focus {
   outline: none !important;
-}
-
-.orderConainer {
-  background-color: var(--white);
-  border-radius: 5px;
-  border: 1px solid var(--dark-green);
-  padding: 25px 20px;
-}
-.order-title {
-  color: var(--dark-green);
-}
-.primary-line {
-  border-left: 1px solid var(--gray);
-}
-.order-primary {
-  color: var(--light-gray);
-}
-.order-primary-number {
-  color: var(--gray);
-}
-
-.order-title-border {
-  border-right: 1px solid var(--dark-green);
-  height: 72px;
 }
