--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,72 @@ code {
 .MuiInputBase-root .MuiSelect-select :focus {
   outline: none !important;
 }
+
+.statsCardVehicle h4 {
+  color: var(--gray);
+  opacity: 0.8;
+  font-weight: 400 !important;
+}
+
+.statsCardVehicle h2 {
+  color: var(--gray);
+}
+.statsCardVehicle {
+  border-radius: var(--border-radius);
+  border: 2px solid var(--light-gray);
+  background-color: var(--white);
+  min-height: 180px;
+}
+.promotion-container {
+  border: 1px solid var(--light-gray);
+  border-radius: 3px;
+}
+.settingIcon {
+  cursor: pointer;
+  color: var(--dark-green);
+}
+.deleteIcon {
+  cursor: pointer;
+  color: var(--delete-red);
+}
+.range-date {
+  color: var(--light-gray);
+  font-weight: 500;
+}
+.formDolar {
+  color: var(--light-gray);
+  font-weight: 500;
+}
+.text-promotion {
+  color: var(--gray);
+  font-size: small;
+}
+.nameModel {
+  color: var(--dark-green);
+  font-weight: bold;
+  font-size: medium;
+}
+.statuCellOnRoad {
+  color: var(--gray);
+  font-weight: 600;
+  cursor: pointer;
+  border: 1px solid var(--gray);
+  padding: 5% 10%;
+  border-radius: 50px;
+  text-align: center !important;
+}
+.statuCellOutOfService {
+  color: var(--delete-red);
+  font-weight: 600;
+  cursor: pointer;
+  border: 1px solid var(--delete-red);
+  padding: 5% 10%;
+  border-radius: 50px;
+}
+.dateNamemodel {
+  color: var(--gray);
+  font-size: x-small;
+}
+.stuts {
+  text-align: center !important;
+}
