add new staff and add new vehicle

--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,10 @@ code {
 .stuts {
   text-align: center !important;
 }
-.w{
+.w {
   width: 100% !important;
 }
- 
+.ArrowBackIcon {
+  color: var(--dark-green);
+  cursor: pointer;
+}
