--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 :root {
   --bg-color: #fafafa;
-  --dark-green: #63894A;
-  --light-green: #33c770;
+  --dark-green: #1b70a8;
+  --light-green: #64b2d6;
+  /* --dark-green: #63894A;
+  --light-green: #33c770; */
   --white: #fff;
   --light-gray: #dadada;
   --gray: #495767;
@@ -9,7 +11,7 @@
   --light-red: #fadfdf;
   --yelloww: rgb(253, 181, 27);
   --sidebar-width: 250px;
-  --border-radius: 4px;
+  --border-radius: 8px;
 }
 
 .textGray {
@@ -106,7 +108,7 @@ textarea {
 /*Dashboard section*/
 
 .dashboardBg {
-  background-image: url("../src/assets/trucksBg.jpg");
+  background-image: url("../src/assets/trucks.png");
   margin: 0 !important;
   height: 300px;
   background-repeat: no-repeat;
@@ -181,6 +183,10 @@ textarea {
   color: var(--dark-green);
   font-weight: 500;
   font-size: 15px;
+}
+
+.scheduleCard {
+  color: var(--dark-green);
 }
 
 /*orders section*/
