--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,9 @@ border-radius: 3px;
 .container-promotion{
   border-right: 1px solid var(--dark-green);
 }
+.circel-delete-icon{
+  cursor: pointer;
+}
 
 
 @media screen and (max-width: 450px) {
