--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   --light-green: #33c770; */
   --white: #fff;
   --light-gray: #eeebeb;
-  --light-gray-1: #d6d3d3;
+  --light-gray-1: #c2c1c1;
   --gray: #495767;
   --delete-red: #c01616;
   --light-red: #fadfdf;
