--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   --light-green: #33c770; */
   --white: #fff;
   --light-gray: #eeebeb;
-  --light-gray-1: #c2c1c1;
+  --mid-gray: #c2c1c1;
   --gray: #495767;
   --delete-red: #c01616;
   --light-red: #fadfdf;
@@ -86,7 +86,7 @@
 }
 
 .formsLable {
-  color: var(--light-gray-1);
+  color: var(--mid-gray);
   font-weight: bold;
 }
 
@@ -108,8 +108,10 @@ textarea {
 
 /*Auth section*/
 .registrationContainer {
-  background-image: url('assets/trucksBg.jpg');
+  background-image: url('assets/trucks.png');
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   min-height: 100vh;
 }
 
@@ -140,7 +142,7 @@ textarea {
 }
 
 .dashboard-tomorrow {
-  border: 1px solid #93d16a;
+  border: 1px solid var(--dark-green);
 }
 
 .dashboardTitleContainer {
@@ -198,13 +200,13 @@ textarea {
 }
 
 .deliveriesTitle {
-  color: var(--dark-green);
+  color: var(--light-green);
   font-weight: 500;
   font-size: 15px;
 }
 
 .scheduleCard {
-  color: var(--dark-green);
+  color: var(--light-green);
 }
 
 /*orders section*/
@@ -233,8 +235,21 @@ textarea {
   color: var(--gray);
 }
 
-/*finalize section*/
+.orderTotalsbox {
+  border: 2px solid var(--dark-green);
+  border-radius: var(--border-radius);
+  margin-bottom: auto;
+}
 
+.delete-promotion-btn .btnContained {
+  background-color: var(--delete-red) !important;
+}
+
+.css-vqmohf-MuiButtonBase-root-MuiRadio-root.Mui-checked {
+  color: var(--dark-green) !important;
+}
+
+/*finalize section*/
 .viewRoute {
   color: var(--dark-green);
   cursor: pointer;
@@ -242,7 +257,6 @@ textarea {
 }
 
 /*Products section*/
-
 .statsCard {
   border-radius: var(--border-radius);
   border: 2px solid var(--light-gray);
@@ -313,6 +327,149 @@ textarea {
   border-radius: 50px;
 }
 
+.product-hide-show .btnOutlined {
+  width: -webkit-fill-available;
+}
+
+.show .btnOutlined {
+  color: var(--dark-green) !important;
+}
+
+.hide .btnOutlined {
+  color: var(--delete-red) !important;
+  border: 2px solid var(--delete-red) !important;
+}
+
+/* customer section*/
+
+.dropDownContainer .MuiFormControl-root {
+  margin: 0 !important;
+  background-color: var(--light-gray);
+}
+
+.MuiInputBase-root .MuiSelect-select {
+  padding: 10px;
+}
+
+.MuiInputBase-root .MuiSelect-select :focus {
+  outline: none !important;
+}
+
+/* Promotion section*/
+.promotion-customer {
+  color: var(--dark-green);
+}
+
+.ArrowBackIcon {
+  color: var(--dark-green);
+  cursor: pointer;
+}
+
+.customer-promotion {
+  border: 1px solid var(--light-gray);
+  border-radius: 3px;
+}
+
+.promotion-container {
+  border: 1px solid var(--light-gray);
+  border-radius: 3px;
+}
+
+.settingIcon {
+  cursor: pointer;
+  color: var(--dark-green);
+}
+
+.deleteIcon {
+  cursor: pointer;
+  color: var(--delete-red);
+}
+
+.range-date {
+  color: var(--mid-gray);
+  font-weight: 500;
+}
+
+.fromDolar {
+  color: var(--mid-gray);
+  font-weight: 500;
+}
+
+.text-promotion {
+  color: var(--gray);
+  font-size: small;
+}
+
+.title-promotion {
+  font-size: small;
+  font-weight: 600;
+  color: var(--gray);
+}
+
+.title-promotion-with {
+  color: var(--gray);
+  font-size: medium;
+  font-weight: 600;
+}
+
+.container-promotion {
+  border-right: 1px solid var(--dark-green);
+  text-align: center;
+}
+
+.circle-delete-icon {
+  cursor: pointer;
+}
+
+/* Vehicle section*/
+
+.statsCardVehicle h5 {
+  color: var(--gray);
+  font-weight: 400 !important;
+}
+
+.statsCardVehicle h2 {
+  color: var(--gray);
+}
+
+.statsCardVehicle {
+  border-radius: var(--border-radius);
+  border: 2px solid var(--light-gray);
+  background-color: var(--white);
+  min-height: 180px;
+  margin-left: 1rem;
+}
+
+.nameModel {
+  color: var(--dark-green);
+  font-weight: bold;
+  font-size: medium;
+}
+
+.statuCellOnRoad {
+  color: var(--gray);
+  font-weight: 600;
+  cursor: pointer;
+  border: 1px solid var(--gray);
+  padding: 5% 10%;
+  border-radius: 50px;
+  text-align: center !important;
+}
+
+.statuCellOutOfService {
+  color: var(--delete-red);
+  font-weight: 600;
+  cursor: pointer;
+  border: 1px solid var(--delete-red);
+  padding: 5% 10%;
+  border-radius: 50px;
+}
+
+.dateNamemodel {
+  color: var(--gray);
+  font-size: x-small;
+}
+
 /*medias*/
 
 @media screen and (max-width: 450px) {
@@ -347,6 +504,19 @@ textarea {
   .registrationContainer>div:first-child {
     margin: 40px 0;
   }
+
+  .statsCardVehicleCon {
+    width: 100%;
+  }
+
+  .statsCardVehicle {
+    margin: 0 !important;
+  }
+
+  .product-hide-show {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -356,5 +526,19 @@ textarea {
 
   .bigLogo {
     width: clamp(290px, 85%, 380px);
+  }
+
+  .container-promotion {
+    border-right: none;
+    text-align: left;
+  }
+
+  .title-promotion {
+    margin-bottom: 0 !important;
+    margin-top: 5px;
+  }
+
+  .title-promotion-with {
+    margin-top: 5px;
   }
 }
