charts add customer order main

--- a/src/App.css
+++ b/src/App.css
@@ -423,6 +423,10 @@ textarea {
   /* background-size: 100% 100%; */
 }
 
+.css-yb0lig {
+  font-weight: bold !important;
+}
+
 .sideBarList .css-10hburv-MuiTypography-root {
   font-weight: bold !important;
 }
